--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: golang:latest
 before_script:
     - ln -s /builds /go/src/gitlab.com
     - cd /go/src/gitlab.com/pab/pb
+    - go get -u github.com/stretchr/testify/assert
 
 stages:
     - test
